--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: 404 - Page not found
+title: 404 - صفحه پیدا نشد
 permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>متاسفانه صفحه مورد نظر شما را پیدا نکردیم</h1>
+  <h1>خطا 404</h1>
   <br/>
 
   <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
